A11yKeyboardMonitor: Don't crash when XKB state is null

BUG: 517711